semi-complete changes to challenge admin

--- a/app/views/admin/challenges/_form.html.erb
+++ b/app/views/admin/challenges/_form.html.erb
@@ -1,95 +1,98 @@
 <%= simple_form_for @challenge, validate: true, html: { :class => 'form-horizontal jqTransform' } do |f| %>
-  <%= f.hidden_field :challenge_id, value: @challenge.challenge_id %>
-  <%= f.hidden_field :account, value: @challenge.account %>
+  <%= f.hidden_field :challenge_id %>
+  <%= f.hidden_field :account %>
+  <%= f.hidden_field :contact %>
+  <%= f.hidden_field :status %>
+  <%= f.hidden_field :community_judging %>
+  <%= f.hidden_field :auto_announce_winners %>  
 
-      <style type="text/css">
-        .jqTransformSelectWrapper ul {
-          height: auto !important;
-        }
+  <style type="text/css">
+    .jqTransformSelectWrapper ul {
+      height: auto !important;
+    }
 
-        .select2-container-multi div {
-          height: auto;
-          margin: 2px 2px 2px 8px;
-          color: #222;
-        }
+    .select2-container-multi div {
+      height: auto;
+      margin: 2px 2px 2px 8px;
+      color: #222;
+    }
 
-        .select2-container-multi .select2-choices {
-          min-height: 26px;
-          padding: 4px 2px;
-          border: 1px solid #ccc;
-          border-radius: 4px;
-          background: none;
-        } 
+    .select2-container-multi .select2-choices {
+      min-height: 26px;
+      padding: 4px 2px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      background: none;
+    } 
 
-        .select2-container-multi.select2-dropdown-open .select2-choices {
-          border-radius: 4px 4px 0 0;
-          border: 1px solid #999;
-        } 
+    .select2-container-multi.select2-dropdown-open .select2-choices {
+      border-radius: 4px 4px 0 0;
+      border: 1px solid #999;
+    } 
 
-        .select2-container-multi.select2-dropdown-open.select2-drop-above .select2-choices {
-          border-radius: 0 0 4px 4px;
-        }
+    .select2-container-multi.select2-dropdown-open.select2-drop-above .select2-choices {
+      border-radius: 0 0 4px 4px;
+    }
 
-        .jqTransformInputInner .select2-container-multi div {
-          height: auto;
-          margin: 2px 2px 2px 8px;
-          color: #222;
-        }
+    .jqTransformInputInner .select2-container-multi div {
+      height: auto;
+      margin: 2px 2px 2px 8px;
+      color: #222;
+    }
 
-        .jqTransformInputInner .datepicker {
-          width: 500px !important;
-          height: 160px !important;
-        }
+    .jqTransformInputInner .datepicker {
+      width: 500px !important;
+      height: 160px !important;
+    }
 
-        .form-nav {
-          padding: 8px 20px;
-          background-color: #f8f8f8;
-        }
+    .form-nav {
+      padding: 8px 20px;
+      background-color: #f8f8f8;
+    }
 
-        #prize-set .jqTransformInputWrapper[style] {
-          width: 72px !important;
-        }
-        #prize-set .jqTransformInput {
-          width: 48px;
-        }
-      </style>
+    #prize-set .jqTransformInputWrapper[style] {
+      width: 72px !important;
+    }
+    #prize-set .jqTransformInput {
+      width: 48px;
+    }
+  </style>
 
-      <div class='tabbable' id="tabs">
-        <!-- tab links: these can be styled to not look like tabs easily -->
-        <ul class='nav nav-tabs' style='font-size:16px'>
-          <% @steps.each_with_index do |step, index| %>
-          <li class="<% if index == 0 %> active <% end %>">
-            <a href="#<%= step.shortname %>" data-toggle="tab"><%= step.name %></a>
-          </li>
-          <% end %>          
-        </ul>
+  <div class='tabbable' id="tabs">
+    <!-- tab links: these can be styled to not look like tabs easily -->
+    <ul class='nav nav-tabs' style='font-size:16px'>
+      <% @steps.each_with_index do |step, index| %>
+      <li class="<% if index == 0 %> active <% end %>">
+        <a href="#<%= step.shortname %>" data-toggle="tab"><%= step.name %></a>
+      </li>
+      <% end %>          
+    </ul>
 
-        <!-- tabs -->
-        <div class='tab-content'>
-          <% @steps.each_with_index do |step, index| %>
-          <div class="tab-pane <% if index == 0 %> active <% end %>" id="<%= step.shortname %>">
-            <%= render step.shortname, {f: f} %>
+    <!-- tabs -->
+    <div class='tab-content'>
+      <% @steps.each_with_index do |step, index| %>
+      <div class="tab-pane <% if index == 0 %> active <% end %>" id="<%= step.shortname %>">
+        <%= render step.shortname, {f: f} %>
 
-            <div class="form-nav clearfix">
-              <% if index != 0 %>
-                <a href="#" class="btn .btn-info pull-left" style="margin-left:25px" onclick="prevTab('#tabs'); return false;">
-                  <span>Prev</span>
-                </a>
-              <% end %>
+        <div class="form-nav clearfix">
+          <% if index != 0 %>
+            <a href="#" class="btn .btn-info pull-left" style="margin-left:25px" onclick="prevTab('#tabs'); return false;">
+              <span>Prev</span>
+            </a>
+          <% end %>
 
-              <% if index < @steps.length - 1 %>
-                <a href="#" class="btn .btn-info pull-right" style="margin-right:25px" onclick="nextTab('#tabs'); return false;">
-                  <span>Next</span>
-                </a>
-              <% else %>
-                <%= f.button :submit, class: 'pull-right', value: @challenge.challenge_id ? 'Save Challenge' : 'Create Challenge' %>
-              <% end %>
-            </div>
-          </div>
-          <% end %>  
+          <% if index < @steps.length - 1 %>
+            <a href="#" class="btn .btn-info pull-right" style="margin-right:25px" onclick="nextTab('#tabs'); return false;">
+              <span>Next</span>
+            </a>
+          <% else %>
+            <%= f.button :submit, :onclick => "return validateForm()", class: 'pull-right', value: @challenge.challenge_id ? 'Save Challenge' : 'Create Challenge' %>
+          <% end %>
+        </div>
+      </div>
+      <% end %>
 
-        </div>  
+    </div>  
 
     </div>
 <% end %>
-
