--- a/app/views/admin/challenges/index.html.erb
+++ b/app/views/admin/challenges/index.html.erb
@@ -1,11 +1,15 @@
 <%= content_wrapper do %>
 
-  <div class="title"><h1>CHALENGE ADMIN</h1></div>
+  <div class="title"><h1>CHALLENGE ADMIN</h1></div>
 
   <div class="span10">
 
-	  <a class="btn btn-primary" type="button" href="<%= new_admin_challenge_path %>"><span>New Challenge</span></a>
-	  <br/><br/>
+	  <a class="btn btn-primary" style="float:left;" type="button" href="<%= new_admin_challenge_path %>"><span>New Challenge</span></a>
+	  <% if @logo %>
+		  <span style="float:right; margin-top:-10px"><img src="<%= @logo %>"></span>
+	  <% end %>
+
+		<div style="clear: both;"></div><br/>
 	 
 	  <table class="table table-hover table-bordered">
 	    <thead>
