added admin function to submit deliverables to thurgood

--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -9,6 +9,12 @@
 		  <form action='/admin/blog_fodder'>
 		  Challenge ID: <input type="text" name="challenge_id"> <div class="btn"><input type="submit" class="btn" value="Submit"></div>
 			</form>
+
+		  <h1>Thurgood</h1>
+		  <p>Submit a Submission Deliverable to Thurgood. Enter the SFDC Submission Deliverable ID: </p>
+		  <form action='/admin/unleash_squirrel'>
+		  <input type="text" name="submission_deliverable_id"> <div class="btn"><input type="submit" class="btn" value="Submit"></div>
+			</form>					
 		</div>
 
 		<div class="span6">
