--- a/app/views/challenges/submit.html.erb
+++ b/app/views/challenges/submit.html.erb
@@ -1,99 +1,114 @@
 <% content_for :head do %><title>Submit Your Entry - CloudSpokes</title><% end %>
 
-<!-- CONTENT
-        ================================================== -->
-<div class="content-wrapper">
-    <div class="container">
+<%= content_wrapper do %>
 
-        <div class="title"><h1>YOUR SUBMISSION</h1></div>
+    <div class="title"><h1>YOUR SUBMISSION</h1></div>
 
-        <div class="row-fluid">
+    <div class="row-fluid">
 
-            <div class="span8">
-                <h1><%= @challenge.name %></h1>
+        <div class="span8">
+            <h1><%= @challenge.name %></h1>
 
-                <div class="title" style="margin-top:10px"><h1>CURRENT MEDIA FOR YOUR SUBMISSION</h1></div>
-                <% if @submissions.empty? %><div align="center">No media found for your submissions for the challenge.</div><% end %>
-                <% @submissions.each do |s| %>
-                <div class="well well-large">
-                    Media : <a href="<%= s.url %>"><%= s.url %></a><br/>
-                    Type : <%= s.type %><br/>
-                    Comments : <%= s.comments %>
-                    <a href="<%= submit_url_or_file_delete_challenge_path %>?submissionId=<%= s.id %>" class="btn pull-right-bottom"><span>DELETE</span></a>
-                </div>
+            <div class="title" style="margin-top:10px;margin-bottom:15px"><h1>CURRENT MEDIA FOR YOUR SUBMISSION</h1></div>
+            <% if @submissions.empty? %><div style="text-align:center;margin-bottom:25px">No media found for your submissions for the challenge.</div><% end %>
+            <% @submissions.each do |s| %>
+            <div class="well well-large">
+                Media : <a href="<%= s.url %>"><%= s.url %></a><br/>
+                Type : <%= s.type %><br/>
+                Comments : <%= s.comments %>
+                <a href="<%= submit_url_or_file_delete_challenge_path %>?submissionId=<%= s.id %>" class="btn pull-right-bottom"><span>DELETE</span></a>
+            </div>
+            <% end %>
+
+            <div class="title" style="margin-top:10px;margin-bottom:15px"><h1>THURGOOD</h1></div>
+            <p><%= link_to 'Thurgood', 'http://blog.cloudspokes.com/2013/04/automated-cloudspokes-code-testing.html', :target => '_blank' %> is our automated build, quality and security analysis platform for submitted challenge code. <%= link_to 'The process', 'http://cs-public.s3.amazonaws.com/thurgood-process.png', :target => '_blank' %> runs through various services to execute your unit tests, scan code for security violations and ensure best practices. You can submit your code to Thurgood as often as you'd like and check the outcome. We highly encourage you to submit your code "early and often" to make sure it is of high quality before your final submission. Your code must be submitted <a href="#submit-instructions" data-toggle="modal">in this format</a> to be processed successfully.</p>
+
+            <p><strong>View your results!</strong> <%= link_to 'Open your Papertrail submission log', papertrail_challenge_path, :target => '_blank' %> for details on the processing of your code. Once your code has been successfully scanned, you will be able to <%= link_to 'download a PDF of the results', "http://cs-thurgood.s3.amazonaws.com/results/#{@challenge.challenge_id}/#{current_user.username}/cx-report.pdf", :target => '_blank' %>.</p>            
+
+            <% if @challenge.open? || @current_member_participant.override_submission_upload %>
+
+                <div class="title" style="margin-top:10px;margin-bottom:15px"><h1>UPLOAD FILES</h1></div>
+                <p>Upload any deliverables for your challenge submission. This can be a zip file containing code, a Word or text file containing instructions, a movie or image. Please do not embed any files in Word docs as we cannot access them. Upload them as files separately.</p>
+
+                <p><strong>You must upload your code (choose Type = 'Code' below) in order to be accepted for the challenge unless specified otherwise in the challenge requirements. <a href="#submit-instructions" data-toggle="modal">Your ZIP files must be in this format to be processed successfully.</a></strong></p>
+
+                <%= form_for :file_submission, :url => submit_file_challenge_path, html: { :id => 'file_submit_form', :class => 'form-horizontal jqTransform', :multipart => true } do |f| %>
+                    <div class="control-group">
+                        <label class="control-label">File</label>
+                        <div class="controls">
+                            <div class="btn-file">
+                                <a href="#" class="btn btn-grey"><span>CHOOSE FILE</span></a>
+                                <%= file_field( 'file', 'file_name' ) %>
+                                <spam>No file chosen</spam>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">Type</label>
+                        <div class="controls">
+                            <%= f.select :type, ['Code','Video','File'] %>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">Comments</label>
+                        <div class="controls">
+                            <%= f.text_area :comments %>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <a class="btn pull-right" onclick="document.getElementById('file_submit_form').submit();"><span>UPLOAD</span></a>
+                    </div>
+                <% end %>                
+
+
+                <div class="title" style="margin-top:10px;margin-bottom:15px"><h1>INCLUDE URLS</h1></div>
+                <p>Add any URLs to supporting into such as a You Tube or Jing videos, a GitHub repo or any other URL you would like to include in your submission.</p>
+
+                <%= form_for :url_submission, :url => submit_url_challenge_path, html: { :id => 'url_submit_form', :class => 'form-horizontal jqTransform' } do |f| %>
+                    <%= f.hidden_field :type, :value => 'URL' %>
+                    <div class="control-group">
+                        <label class="control-label">URL</label>
+                        <div class="controls">
+                            <%= f.text_field :link, :placeholder => 'http://' %>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <label class="control-label">Comments</label>
+                        <div class="controls">
+                            <%= f.text_area :comments %>
+                        </div>
+                    </div>
+                    <div class="control-group">
+                        <a class="btn pull-right" onclick="document.getElementById('url_submit_form').submit();"><span>ADD</span></a>
+                    </div>
                 <% end %>
 
-                <% if Rails.env.development? %>
-                    <div class="title"><h1>PAPERTRAIL</h1></div>
-                    <%= link_to 'Open Papertrail to view your logs.', papertrail_challenge_path, :target => :blank %>
-                <% end %>                 
+            <% end %>
 
-                <% if @challenge.open? || @current_member_participant.override_submission_upload %>
-
-                    <div class="title"><h1>UPLOAD FILES</h1></div>
-                    <p>Upload any deliverables for your challenge submission. This can be a zip file containing code, a Word or text file containing instructions, a movie or image. Please do not embed any files in Word docs as we cannot access them. Upload them as files separately.</p>
-
-                    <p><strong>You must upload your code (choose Type = 'Code' below) in order to be accepted for the challenge unless specified otherwise in the challenge requirements.</strong></p>
-
-                    <%= form_for :file_submission, :url => submit_file_challenge_path, html: { :id => 'file_submit_form', :class => 'form-horizontal jqTransform', :multipart => true } do |f| %>
-                        <div class="control-group">
-                            <label class="control-label">File</label>
-                            <div class="controls">
-                                <div class="btn-file">
-                                    <a href="#" class="btn btn-grey"><span>CHOOSE FILE</span></a>
-                                    <%= file_field( 'file', 'file_name' ) %>
-                                    <spam>No file chosen</spam>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label">Type</label>
-                            <div class="controls">
-                                <%= f.select :type, ['Code','Video','File'] %>
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label">Comments</label>
-                            <div class="controls">
-                                <%= f.text_area :comments %>
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <a class="btn pull-right" onclick="document.getElementById('file_submit_form').submit();"><span>UPLOAD</span></a>
-                        </div>
-                    <% end %>                
-
-
-                    <div class="title"><h1>INCLUDE URLS</h1></div>
-                    <p>Add any URLs to supporting into such as a You Tube or Jing videos, a GitHub repo or any other URL you would like to include in your submission.</p>
-
-                    <%= form_for :url_submission, :url => submit_url_challenge_path, html: { :id => 'url_submit_form', :class => 'form-horizontal jqTransform' } do |f| %>
-                        <%= f.hidden_field :type, :value => 'URL' %>
-                        <div class="control-group">
-                            <label class="control-label">URL</label>
-                            <div class="controls">
-                                <%= f.text_field :link, :placeholder => 'http://' %>
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <label class="control-label">Comments</label>
-                            <div class="controls">
-                                <%= f.text_area :comments %>
-                            </div>
-                        </div>
-                        <div class="control-group">
-                            <a class="btn pull-right" onclick="document.getElementById('url_submit_form').submit();"><span>ADD</span></a>
-                        </div>
-                    <% end %>
-
-                <% end %>
-
-            </div>
-
-
-            <div class="span4">
-                <%= render partial: "right_side", locals: {challenge: @challenge} %>
-            </div>
         </div>
-    </div> <!-- /.container -->
-</div><!-- /.loginbar-wrapper -->
+
+
+        <div class="span4">
+            <%= render partial: "right_side", locals: {challenge: @challenge} %>
+        </div>
+    </div>
+
+<% end %>
+
+<!-- Modal -->
+<div id="submit-instructions" class="modal hide fade" tabindex="-1" role="dialog">
+<div class="modal-header"></div>
+<div class="modal-body">
+  <div class="title" style="margin:0px"><h1>Code Submission Instructions</h1></div>
+  <div class="content">
+    <p>The code for your submission will go through <%= link_to('Cloudbees', 'http://www.cloudbees.com') %>, <%= link_to('Checkmarx', 'http://www.checkmarx.com/') %>, JSLint, PhantomJS, Checkstyle and many others services based upon the platform and/or type of code you submit. Your submitted ZIP file must be in the format outlined below. In order to be properly scanned and processed successfully, your code submission ZIP file must include a single directory named "src" which contains your source code and unit tests. Simply ZIP up this "src" directory and upload it as your code submission.</p>
+
+    <p>Do not include any documentation, videos, graphics, etc. in your code ZIP file as it may adversely affect the processing of your submission. Upload these types of deliverables separately.</p>
+
+    <p>For example, for a Force.com submission, the "src" directory would contain the manifest file (package.xml) and the directories for the various components in your submission including unit tests.</p>
+    <%= image_tag('submission-structure.png', :style => 'padding-left:10px') %>
+  </div>
+</div>
+<div class="modal-footer"></div>
+<button type="button" class="close" data-dismiss="modal"></button>
+</div>
