--- a/app/views/judging/scorecard.html.erb
+++ b/app/views/judging/scorecard.html.erb
@@ -33,10 +33,20 @@
         <% @submissions.each do |s| %>
         <tr>
           <td><%= s.type %></td>
-          <td width="45%"><%= link_to s.url, s.url, :target => '_blank' %></td>
+          <td width="45%"><%= link_to s.url.split('/').last, s.url, :target => '_blank' %></td>
           <td width="50%"><%= s.comments %></td>
         </tr>
-        <% end %>        
+        <% end %>  
+        <tr>
+          <td>PDF</td>
+          <td width="45%"><%= link_to 'CheckMarx Scan Results', "http://cs-thurgood.s3.amazonaws.com/results/#{@participant.challenge.challenge_id}/#{@participant.member.name}/cx-report.pdf", :target => '_blank' %></td>
+          <td width="50%">The results file will only be available if the scanning process was successful. Otherwise you will receive an "AccessDenied" message.</td>
+        </tr>    
+        <tr>
+          <td>Log</td>
+          <td width="45%"><%= link_to 'Papertrail submission log', papertrail_challenge_path(@participant.challenge, {:participant_id => @participant.id}), :target => '_blank' %></td>
+          <td width="50%">Low-level details on the unit test, security scanning and more.</td>
+        </tr>                         
         </tbody>
         </table>        
 
