reverted back to admin code for ckeditor for requirements

--- a/app/views/admin/challenges/_step2.html.erb
+++ b/app/views/admin/challenges/_step2.html.erb
@@ -1,74 +1,1 @@
-
-<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/ui-darkness/jquery-ui.css" type="text/css" />
-
-<%= stylesheet_link_tag "admin/groupedSliders" %>
-<%= stylesheet_link_tag "admin/requirements" %>
-
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
-<%= javascript_include_tag "admin/groupedSliders" %>
-<%= javascript_include_tag "admin/collapse" %>
-<%= javascript_include_tag "admin/requirements" %>
-
-<div id="add-requirement">
-	<a href="#add-requirement-modal" data-toggle="modal" class="btn .btn-info pull-left" style="margin-left:10px" >
-	<span>Add Requirement</span> </a>
-	<a href="#" id="post-json" class="btn .btn-info pull-right" style="margin-right:20px" ><span>Post JSON</span></a>			
-</div>
-
-<br/><br/><br/>
-<p>Use this tab to define the requirements for the challenge. Each requirement will be translated into a question on the scorecard that judges fill out.</p>
-
-<div style="clear:both"></div>	
-<div id="eq" class="sliderGroup reqContainer" min="0" max="100" total="100"></div>
-
-<!-- Modal -->
-<div id="add-requirement-modal" class="modal hide fade" tabindex="-1" role="dialog">
-<div class="modal-header"></div>
-<div class="modal-body" id="add-requirement-modal-body">
-    <div class="title"><h1>Add New Requirement</h1></div>
-    <div class="content">
-      <form id="newRequirementForm" class="form-horizontal" action="javascript:void(0);">
-	  <div class="control-group">
-		<label class="control-label" for="reqTitle">Short Title</label>
-		<div class="controls">
-		  <input type="text" id="reqTitle" required placeholder="Requirement Title">
-		</div>
-	  </div>
-	  <div class="control-group">
-		<label class="control-label" for="reqDescription">Description</label>
-		<div class="controls">
-		  <textarea id="reqDescription" required placeholder="Provide Detailed Description of this Requirement here"></textarea>
-		</div>
-	  </div>
-	  <div class="control-group">
-		<label class="control-label" for="reqSection">Section</label>
-		<div class="controls">
-		  <input type="text" id="reqSection" required placeholder="Requirement Section">
-		</div>
-	  </div>	  
-	  <div class="control-group">
-		<label class="control-label" for="reqType">Type</label>
-		<div class="controls">
-			<select id="reqType">
-				<option value="1-2">1-2</option>
-				<option value="1-4">1-4</option>
-				<option value="1-5">1-5</option>
-				<option value="1-10">1-10</option>
-			</select>
-		</div>
-	  </div>
-	  <div class="control-group">
-		<div class="controls">
-			<button type="button" id="newRequirementBtn" class="btn">Add Requirement</button>
-      <button type="button" id="saveAndNew" class="btn">Save and New</button>			
-		</div>
-	  </div>
-	</form>  
-    </div>
-  <br/>
-</div>
-<div class="modal-footer"></div>
-<button type="button" class="close" data-dismiss="modal"></button>
-</div>
-
-</script>
+<%= f.input :requirements, :as => :text, input_html: { :class => 'ckeditor' } %>
