changes to madison

--- a/app/assets/stylesheets/admin/requirements.css
+++ b/app/assets/stylesheets/admin/requirements.css
@@ -34,3 +34,13 @@
 {
 	float:right;
 }
+
+.editLink {
+	padding-left: 20px;
+	font-size: 8pt;
+}
+
+.deleteLink {
+	padding-left: 5px;
+	font-size: 8pt;
+}
