--- a/app/views/challenges/submit.html.erb
+++ b/app/views/challenges/submit.html.erb
@@ -27,38 +27,61 @@
 
             <% if @challenge.open? || @current_member_participant.override_submission_upload %>
 
-                <div class="title" style="margin-top:10px;margin-bottom:15px"><h1>UPLOAD FILES</h1></div>
+                <div class="title" style="margin-top:10px;margin-bottom:15px" id="uploadfiles"><h1>UPLOAD FILES</h1></div>
                 <p>Upload any deliverables for your challenge submission. This can be a zip file containing code, a Word or text file containing instructions, a movie or image. Please do not embed any files in Word docs as we cannot access them. Upload them as files separately.</p>
 
-                <p><strong>You must upload your code (choose Type = 'Code' below) in order to be accepted for the challenge unless specified otherwise in the challenge requirements. <a href="#submit-instructions" data-toggle="modal">Your ZIP files must be in this format to be processed successfully.</a></strong></p>
+                <p><strong>Submitting files is a two step process. First upload your file to Cloud Storage using the form below. After the file is successfully uploaded (the page will refresh), select the type of file, add any relevant comments and then add it to your submission. When adding your code, after you upload it to Cloud Storage, you must add it to your submission as <i>Type = 'Code'</i> in order to be accepted for the challenge (unless specified otherwise in the challenge requirements).</p>
+                <p>Upload a <a href="#submit-instructions" data-toggle="modal">.zip file of all of your code in this format.</a> Files not in this format will not be processed successfully for your submission and will not be accepted.</strong></p>
 
-                <%= form_for :file_submission, :url => submit_file_challenge_path, html: { :id => 'file_submit_form', :class => 'form-horizontal jqTransform', :multipart => true } do |f| %>
-                    <div class="control-group">
-                        <label class="control-label">File</label>
-                        <div class="controls">
-                            <div class="btn-file">
-                                <a href="#" class="btn btn-grey"><span>CHOOSE FILE</span></a>
-                                <%= file_field( 'file', 'file_name' ) %>
-                                <spam>No file chosen</spam>
+                <% if params[:key] %>
+
+                    <%= form_for :file_submission, :url => submit_file_challenge_path, html: { :id => 'file_submit_form', :class => 'form-horizontal jqTransform' } do |f| %>
+                        <%= f.hidden_field :link, :value => params[:key] %>
+
+                        <div class="control-group">
+                            <label class="control-label">File</label>
+                            <div class="controls">
+                                <%= params[:key] %>
                             </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label">Type</label>
-                        <div class="controls">
-                            <%= f.select :type, ['Code','Video','File'] %>
+                        <div class="control-group">
+                            <label class="control-label">Type</label>
+                            <div class="controls">
+                                <%= f.select :type, ['Code','Video','File'] %>
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <label class="control-label">Comments</label>
-                        <div class="controls">
-                            <%= f.text_area :comments %>
+                        <div class="control-group">
+                            <label class="control-label">Comments</label>
+                            <div class="controls">
+                                <%= f.text_area :comments %>
+                            </div>
                         </div>
-                    </div>
-                    <div class="control-group">
-                        <a class="btn pull-right" onclick="document.getElementById('file_submit_form').submit();"><span>UPLOAD</span></a>
-                    </div>
-                <% end %>                
+                        <div class="control-group">
+                            <a class="btn pull-right" onclick="document.getElementById('file_submit_form').submit();"><span>ADD TO SUBMISSION</span></a>
+                        </div>
+                    <% end %>  
+
+                
+                <% else %>
+
+                    <%= direct_upload_form_for @uploader, html: { :id => 'cloud_storage_upload_form', :class => 'form-horizontal jqTransform' } do |f| %>
+                        <div class="control-group">
+                            <label class="control-label">File</label>
+                            <div class="controls">
+                                <div class="btn-file">
+                                    <a href="#" class="btn btn-grey"><span>CHOOSE FILE</span></a>
+                                    <%= f.file_field :code %>
+                                    <spam style="padding-left:10px">No file chosen</spam>
+                                </div>
+                            </div>
+                        </div>                
+                        <div class="control-group">
+                            <a class="btn pull-right" onclick="document.getElementById('cloud_storage_upload_form').submit();"><span>UPLOAD TO CLOUD STORAGE</span></a>
+                        </div>
+                    <% end %>
+
+                <% end %>
+
 
 
                 <div class="title" style="margin-top:10px;margin-bottom:15px"><h1>INCLUDE URLS</h1></div>
@@ -79,7 +102,7 @@
                         </div>
                     </div>
                     <div class="control-group">
-                        <a class="btn pull-right" onclick="document.getElementById('url_submit_form').submit();"><span>ADD</span></a>
+                        <a class="btn pull-right" onclick="document.getElementById('url_submit_form').submit();"><span>ADD TO SUBMISSION</span></a>
                     </div>
                 <% end %>
 
