--- a/app/views/challenges/submit.html.erb
+++ b/app/views/challenges/submit.html.erb
@@ -28,7 +28,7 @@
             <% if @challenge.open? || @current_member_participant.override_submission_upload %>
 
                 <div class="title" style="margin-top:10px;margin-bottom:15px" id="uploadfiles"><h1>UPLOAD FILES</h1></div>
-                <p>Upload any deliverables for your challenge submission. This can be a zip file containing code, a Word or text file containing instructions, a movie or image. Please do not embed any files in Word docs as we cannot access them. Upload them as files separately.</p>
+                <p>Upload any deliverables for your challenge submission. This can be a zip file containing code, a Word or text file containing instructions, a movie or image. Max size is 15MB. Please do not embed any files in Word docs as we cannot access them. Upload them as files separately.</p>
 
                 <p><strong>Submitting files is a two step process. First upload your file to Cloud Storage using the form below. After the file is successfully uploaded (the page will refresh), select the type of file, add any relevant comments and then add it to your submission. When adding your code, after you upload it to Cloud Storage, you must add it to your submission as <i>Type = 'Code'</i> in order to be accepted for the challenge (unless specified otherwise in the challenge requirements).</p>
                 <p>Upload a <a href="#submit-instructions" data-toggle="modal">.zip file of all of your code in this format.</a> Files not in this format will not be processed successfully for your submission and will not be accepted.</strong></p>
