--- a/app/views/content/bad.html.erb
+++ b/app/views/content/bad.html.erb
@@ -13,7 +13,7 @@
 	</div>
 
 	<div class="span4">
-		<p><br/>Unfortunately, we were unable to complete your last action. This was probably due to a malformed request.</p>
+		<p><br/>Unfortunately, we were unable to complete your last action. This was probably due to a malformed request, server error or the coming zombie apocalypse.</p>
 		<p>You can try hitting the back button and attempting the action again or perhaps you'd like to visit our <%= link_to 'home page', :root %> or <%= link_to 'list of open challenges', challenges_path %>?</p>
 	</div>	
 
