additions for catching cmc tasks

--- a/app/views/admin/challenges/_form.html.erb
+++ b/app/views/admin/challenges/_form.html.erb
@@ -4,7 +4,10 @@
   <%= f.hidden_field :contact %>
   <%= f.hidden_field :status %>
   <%= f.hidden_field :community_judging %>
-  <%= f.hidden_field :auto_announce_winners %>  
+  <%= f.hidden_field :auto_announce_winners %> 
+  <%= f.hidden_field :cmc_task %> 
+  <%= f.hidden_field :scorecard_type %> 
+  <%= f.hidden_field :terms_of_service %>   
 
   <style type="text/css">
     .jqTransformSelectWrapper ul {
