checking for nil

--- a/app/views/challenges/_discussions.html.erb
+++ b/app/views/challenges/_discussions.html.erb
@@ -1,25 +1,31 @@
-<% if comments.empty? %>No discussion comments for this challenge.<% end %>
+<% if comments %>
 
-<% comments.each do |comment| %>
-  <%= render partial: "comment", locals: {comment: comment, challenge: challenge} %>
-  <% comment.replies.each do |reply| %>
-    <%= render partial: "comment", locals: {comment: reply} %>
-  <% end %>
-  <% if challenge.show_discussion_board_entry? %>
-    <% if comment.id == params[:reply_to] %>
-      <div class="reply-form">
-        <%= render partial: "new_comment", locals: {challenge: challenge} %>
-      </div>
+  <% if comments.empty? %>No discussion comments for this challenge.<% end %>
+
+  <% comments.each do |comment| %>
+    <%= render partial: "comment", locals: {comment: comment, challenge: challenge} %>
+    <% comment.replies.each do |reply| %>
+      <%= render partial: "comment", locals: {comment: reply} %>
+    <% end %>
+    <% if challenge.show_discussion_board_entry? %>
+      <% if comment.id == params[:reply_to] %>
+        <div class="reply-form">
+          <%= render partial: "new_comment", locals: {challenge: challenge} %>
+        </div>
+      <% end %>
     <% end %>
   <% end %>
-<% end %>
 
-<hr/>
+  <hr/>
 
-<% if challenge.show_discussion_board_entry? %>
-  <% if params[:reply_to].blank? %>
-    <%= render partial: "new_comment", locals: {challenge: challenge} %>
+  <% if challenge.show_discussion_board_entry? %>
+    <% if params[:reply_to].blank? %>
+      <%= render partial: "new_comment", locals: {challenge: challenge} %>
+    <% end %>
+  <% else %>
+    The discussion board is closed for this challenge. 
   <% end %>
+
 <% else %>
-  The discussion board is closed for this challenge. 
+  No discussion comments for this challenge.
 <% end %>
