--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -274,7 +274,9 @@ a.circle-orange-large span {
 .facebook {
     background-position: -376px -78px;
 }
-
+.website{
+    background-position: -376px -680px;
+}
 .twitter {
     background-position: -376px -39px;
 }
