--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -2039,8 +2039,8 @@ table th[class*="span"],
 .dropdown-menu li > a:focus,
 .dropdown-submenu:hover > a {
   color: #f8941e;
+  background: #fbead4 ;
   text-decoration: none;
-  background-color: #ffffff;
   /*background-image: -moz-linear-gradient(top, #F8941E, #c86e1d);*/
   /*background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#F8941E), to(#c86e1d));*/
   /*background-image: -webkit-linear-gradient(top, #F8941E, #c86e1d);*/
