--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -141,7 +141,7 @@
                       <li><%= link_to 'Overview', '/overview' %></li>
                       <li><%= link_to 'What We Do', '/what-we-do' %></li>
                       <li><%= link_to 'How It Works', '/how-it-works' %></li>
-                      <li><%= link_to 'Highlights', '/what-we-do/highlights' %></li>
+                      <li><%= link_to 'About Us', '/about' %></li>
                       <li><%= link_to 'Spokes', '/partners' %></li>
                       <li><%= link_to 'Contact Us', '/contact' %></li>
                   </ul>
