--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -37,38 +37,65 @@
     <div class="container">
 
         <div class="title"><h1>MEMBER PROFILE</h1></div>
-        <div class="container">
-            <div class="span6 border-right">
-                <%= image_tag(@member.profile_pic, :width => '82x82', :class => 'pull-left photo') %>
-                <div class="pull-left info">
-                    <div class="well">
-                        <div class="top">
-                            <h2><%= @member.name %></h2>
-                            <span><%= @member.country %></span>
-                        </div>
-                        <div class="bottom">
-                            <strong><%= number_with_delimiter(@member.total_points, :delimiter => ',') %></strong> pts<br>
-                            <strong><%= number_to_currency(@member.total_public_money, :precision => 0) %></strong>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="span6 status">
-                
-            </div>
-        </div>
-        
-        <div id="quotes">
-            <div class="item">
-                <div class="quote">
-                    <%= @member.quote %>
-                </div>
-            </div>
-        </div>
+
 
         <div class="row-fluid">
 
-            <div class="span8">
+          <div class="span4">
+
+            <div class="clearfix">
+              <%= image_tag(@member.profile_pic, :width => '82x82', :class => 'pull-left photo') %>
+              <div class="pull-left info">
+                <div class="well">
+                  <div class="top">
+                    <h2><%= @member.name %></h2>
+                    <span><%= @member.country %></span>
+                  </div>
+                  <div class="bottom">
+                    <strong><%= number_with_delimiter(@member.total_points, :delimiter => ',') %></strong> <br/>Pts<br>
+                    <strong><%= number_to_currency(@member.total_public_money, :precision => 0) %></strong>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <h2>LEVEL</h2>
+
+
+            <h2>QUOTE</h2>
+            <div class="quote">
+              <p><%= @member.quote %></p>
+            </div>
+
+            <h2>BIO</h2>
+            <div>
+              <p><%= @member.summary_bio %></p>
+            </div>
+
+            <h2>CONNECT</h2>
+            <div class="content">
+              <ul class="unstyled inline">
+                <% if @member.website %>
+                    <li><a href="<%= @member.website %>" class="circle-orange"><span class="website"><%= @member.website %></span></a></li>
+                <% end %>
+                <% if @member.twitter %>
+                    <li><a href="http://www.twitter.com/<%= @member.twitter %>" class="circle-orange"><span class="twitter"><%= @member.twitter %></span></a></li>
+                <% end %>
+                <% if @member.github %>
+                    <li><a href="http://www.github.com/<%= @member.github %>" class="circle-orange"><span class="github"><%= @member.github %></span></a></li>
+                <% end %>
+                <% if @member.facebook %>
+                    <li><a href="<%= @member.facebook %>" class="circle-orange"><span class="facebook"><%= @member.facebook %></span></a></li>
+                <% end %>
+                <% if @member.linkedin %>
+                    <li><a href="<%= @member.linkedin %>" class="circle-orange"><span class="linkedin"><%= @member.linkedin %></span></a></li>
+                <% end %>
+                </ul>
+            </div>
+
+          </div>
+
+          <div class="span8">
 <!--
                 <h2>RECENT ACHIEVEMENTS</h2>
                 <ul class="brief-info unstyled">
@@ -129,19 +156,19 @@
                     </div>
                 </div>
 
-                <h2>RECENT ACTIVITY</h2>
-                <ul class="brief-info unstyled">
-                    <li class="wider">
-                    <!--
-                        <img src="/assets/discussion-champion.png" height="67" alt=""/>
-                        <div class="info">
-                            <span>logontokartik unlocked<br>the Discussion Champion badge.</span><br>
-                            <span class="gray">September 11, 2012</span>
-                        </div>
-                        -->
-                    </li>
-                    
-                </ul>
+                <!--<h2>RECENT ACTIVITY</h2>-->
+                <!--<ul class="brief-info unstyled">-->
+                    <!--<li class="wider">-->
+                    <!--&lt;!&ndash;-->
+                        <!--<img src="/assets/discussion-champion.png" height="67" alt=""/>-->
+                        <!--<div class="info">-->
+                            <!--<span>logontokartik unlocked<br>the Discussion Champion badge.</span><br>-->
+                            <!--<span class="gray">September 11, 2012</span>-->
+                        <!--</div>-->
+                        <!--&ndash;&gt;-->
+                    <!--</li>-->
+                    <!---->
+                <!--</ul>-->
 
 
                 <h2>
@@ -149,53 +176,25 @@
                     <!-- <small>1 of 10 missions complete</small> -->
                 </h2>
                 <div class="slider missions">
-                    <div class="bv_missions" bv_options='{"orientation":"carousel"}'/>
-			    </div>
+                    <div class="bv_missions" bv_options='{"orientation":"carousel"}'></div>
                 </div>
-                
-                 
+
+              <h2><%= pluralize(@active_challenges.count, "ACTIVE CHALLENGE").upcase %></h2>
+              <div class="content clearfix">
+                <%= render partial: "challenges_sidebar", locals: {challenges: @active_challenges} %>
+              </div>
+
+              <h2><%= pluralize(@past_challenges.count, "PAST CHALLENGE").upcase %></h2>
+              <div class="content clearfix">
+                <%= render partial: "challenges_sidebar", locals: {challenges: @past_challenges[0..2]} %>
+              </div>
+
+              <div class="content total-link">
+                <a href="/members/<%= @member.name %>/past-challenges" class="title-link">View All Past Challenges</a>
+              </div>
             </div>
 
-            <div class="span4">
 
-                <h2>SOCIAL</h2>
-                <div class="content">
-                    <p>
-                        <% if @member.website %>
-                            Website: <a href="<%= @member.website %>"><%= @member.website %></a><br/>
-                        <% end %>
-                        <% if @member.github %>
-                            Github: <a href="http://www.github.com/<%= @member.github %>"><%= @member.github %></a><br/>
-                        <% end %>
-                        <% if @member.twitter %>
-                            Twitter: <a href="http://www.twitter.com/<%= @member.twitter %>"><%= @member.twitter %></a><br/>
-                        <% end %>
-                        <% if @member.facebook %>
-                            Facebook: <a href="<%= @member.facebook %>"><%= @member.facebook %></a><br/>
-                        <% end %>
-                        <% if @member.linkedin %>
-                            LinkedIn: <a href="<%= @member.linkedin %>"><%= @member.linkedin %></a><br/>
-                        <% end %>
-                    </p>
-                </div>
-
-                <h2><%= pluralize(@active_challenges.count, "ACTIVE CHALLENGE").upcase %></h2>
-                <div class="content">
-                     <%= render partial: "challenges_sidebar", locals: {challenges: @active_challenges} %>
-                </div>
-
-                <h2><%= pluralize(@past_challenges.count, "PAST CHALLENGE").upcase %></h2>
-                <div class="content">
-                     <%= render partial: "challenges_sidebar", locals: {challenges: @past_challenges[0..2]} %>
-                </div>
-
-                <div class="content total-link">
-                    <a href="/members/<%= @member.name %>/past-challenges" class="title-link">View All Past Challenges</a>
-                </div>
-
-                <%= render partial: "shared/share_this" %>
-
-            </div>
         </div>
     </div> <!-- /.container -->
 </div><!-- /.loginbar-wrapper -->
