made button delete button look pretty

--- a/app/views/admin/challenges/_assets.html.erb
+++ b/app/views/admin/challenges/_assets.html.erb
@@ -12,7 +12,7 @@
       <% @current_assets.each do |asset| %>
       <tr>
         <td><%= link_to asset.filename, "https://s3.amazonaws.com/challenges/#{@challenge.challenge_id}/#{asset.filename}" %></td>
-        <td width="100" align="center"><a href="<%= admin_delete_asset_path %>?asset_id=<%= asset.id %>" class="btn .btn-info"><span>Delete</span></a></td>
+        <td width="75"><a href="<%= admin_delete_asset_path %>?asset_id=<%= asset.id %>" class="btn .btn-info"><span>Delete</span></a></td>
       </tr>
       <% end %>        
     </tbody>
