poped modal if cmc task is passed

--- a/app/views/admin/challenges/index.html.erb
+++ b/app/views/admin/challenges/index.html.erb
@@ -64,3 +64,12 @@
     </div>      
 
 <% end %>
+
+<% if params[:task] %>
+  <!-- if a cmc task was passed, show the modal immediately -->
+  <script type="text/javascript">
+    $(window).load(function(){
+      $('#new-challenge-modal').modal('show');
+    });
+  </script>
+<% end %>
