--- a/app/views/admin/challenges/index.html.erb
+++ b/app/views/admin/challenges/index.html.erb
@@ -47,10 +47,13 @@
             <div class="content">
               <%= form_for 'challenge_admin', :action => admin_challenges_path, :method => "post", html: { :id => 'new_challenge_frm' } do |f| %>
                 <% if params[:task] %>
-                  <p>It looks like you are trying to create a challenge from a CMC task. We'll magically reference your task info when creating the challenge and pull in some data.</p>
+                  <p>It looks like you are trying to create a challenge from a CMC task. We'll magically reference your task info when creating the challenge and pull in some data
+                  such as task name, description, etc.</p>
+                  <p><%= f.text_field :name, :id => 'challenge_name', :value => "CMC Task #{params['task']}", :size => 70 %><br/><br/></p>      
+                <% else %>
+                  <p>Enter the display name for your challenge. You can always change this later if you are unsure now. </p>
+                  <p><%= f.text_field :name, :id => 'challenge_name', :size => 70 %><br/><br/></p>                
                 <% end %>
-                <p>Enter the display name for your challenge. You can always change this later if you are unsure now. </p>
-                <p><%= f.text_field :name, :id => 'challenge_name', :size => 70 %><br/><br/></p>
               <div class="new-challenge-results" style="float:left;padding-left:15px;padding-right:15px;padding-top:15px"></div>
               <% end %>
             </div>
