--- a/app/views/admin/challenges/_step2.html.erb
+++ b/app/views/admin/challenges/_step2.html.erb
@@ -1,126 +1,23 @@
-<% if params[:use_madison] %>
+<% if @can_edit_challenge_requirements %>
 
-	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/themes/ui-darkness/jquery-ui.css" type="text/css" />
+  <script>
+  function showMadison() {
+    window.open("/madison/#/<%= @challenge.challenge_id %>","_blank","toolbar=yes, location=yes, directories=no, status=no, menubar=yes, scrollbars=yes, resizable=no, copyhistory=yes, width=1000, height=700");
+  }
+  </script>
 
-	<%= stylesheet_link_tag "admin/groupedSliders" %>
-	<%= stylesheet_link_tag "admin/requirements" %>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
-	<%= javascript_include_tag "admin/groupedSliders" %>
-	<%= javascript_include_tag "admin/collapse" %>
-	<%= javascript_include_tag "admin/requirements" %>
-
-	<div id="add-requirement">
-		<a href="#add-requirement-modal" data-toggle="modal" class="btn .btn-info pull-left" style="margin-left:10px" >
-		<span>Add Requirement</span> </a>
-		<a href="#" id="post-json" class="btn .btn-info pull-right" style="margin-right:20px" ><span>Post JSON</span></a>			
-	</div>
-
-	<br/><br/><br/>
-	<p>Use this tab to define the requirements for the challenge. Each requirement will be translated into a question on the scorecard that judges fill out.</p>
-
-	<div style="clear:both"></div>	
-	<div id="eq" class="sliderGroup reqContainer" min="0" max="100" total="100"></div>
-
-	<!-- Edit Requirement Modal -->
-	<div id="edit-requirement-modal" class="modal hide fade" tabindex="-1" role="dialog">
-	<div class="modal-header"></div>
-	<div class="modal-body" id="edit-requirement-modal-body">
-	    <div class="title"><h1>Edit Requirement</h1></div>
-	    <div class="content">
-	      <form id="newRequirementForm" class="form-horizontal" action="javascript:void(0);">
-		  <div class="control-group">
-			<label class="control-label" for="reqTitle">Short Title</label>
-			<div class="controls">
-			  <input type="text" id="reqTitle" required placeholder="Requirement Title">
-			</div>
-		  </div>
-		  <div class="control-group">
-			<label class="control-label" for="reqDescription">Description</label>
-			<div class="controls">
-			  <textarea id="reqDescription" required placeholder="Provide Detailed Description of this Requirement here"></textarea>
-			</div>
-		  </div>
-		  <div class="control-group">
-			<label class="control-label" for="reqSection">Section</label>
-			<div class="controls">
-			  <input type="text" id="reqSection" required placeholder="Requirement Section">
-			</div>
-		  </div>	  
-		  <div class="control-group">
-			<label class="control-label" for="reqType">Type</label>
-			<div class="controls">
-				<select id="reqType">
-					<option value="1-2">1-2</option>
-					<option value="1-4">1-4</option>
-					<option value="1-5">1-5</option>
-					<option value="1-10">1-10</option>
-				</select>
-			</div>
-		  </div>
-		  <div class="control-group">
-			<div class="controls">
-				<button type="button" id="newRequirementBtn" class="btn">Save Requirement</button>
-			</div>
-		  </div>
-		</form>  
-	    </div>
-	  <br/>
-	</div>
-	<div class="modal-footer"></div>
-	<button type="button" class="close" data-dismiss="modal"></button>
-	</div>
-
-	<!-- Add Requirement Modal -->
-	<div id="add-requirement-modal" class="modal hide fade" tabindex="-1" role="dialog">
-	<div class="modal-header"></div>
-	<div class="modal-body" id="add-requirement-modal-body">
-	    <div class="title"><h1>Add New Requirement</h1></div>
-	    <div class="content">
-	      <form id="newRequirementForm" class="form-horizontal" action="javascript:void(0);">
-		  <div class="control-group">
-			<label class="control-label" for="reqTitle">Short Title</label>
-			<div class="controls">
-			  <input type="text" id="reqTitle" required placeholder="Requirement Title">
-			</div>
-		  </div>
-		  <div class="control-group">
-			<label class="control-label" for="reqDescription">Description</label>
-			<div class="controls">
-			  <textarea id="reqDescription" required placeholder="Provide Detailed Description of this Requirement here"></textarea>
-			</div>
-		  </div>
-		  <div class="control-group">
-			<label class="control-label" for="reqSection">Section</label>
-			<div class="controls">
-			  <input type="text" id="reqSection" required placeholder="Requirement Section">
-			</div>
-		  </div>	  
-		  <div class="control-group">
-			<label class="control-label" for="reqType">Type</label>
-			<div class="controls">
-				<select id="reqType">
-					<option value="1-2">1-2</option>
-					<option value="1-4">1-4</option>
-					<option value="1-5">1-5</option>
-					<option value="1-10">1-10</option>
-				</select>
-			</div>
-		  </div>
-		  <div class="control-group">
-			<div class="controls">
-				<button type="button" id="newRequirementBtn" class="btn">Add Requirement</button>
-	      <button type="button" id="saveAndNew" class="btn">Save and New</button>			
-			</div>
-		  </div>
-		</form>  
-	    </div>
-	  <br/>
-	</div>
-	<div class="modal-footer"></div>
-	<button type="button" class="close" data-dismiss="modal"></button>
-	</div>
+  <center><p>
+  <% if @madison_requirements > 0 %>
+    You have <%= @madison_requirements %> requirements for this challenge which will display after any text
+    you enter in the requirements<br/>rich text editor below. You can edit these requirements while the challenge is in Draft by <a href="#" onclick="showMadison();">clicking here</a>.
+  <% else %>
+    <a href="#" onclick="showMadison();">Define your requirements using Madison.</a> 
+  <% end %> 
+  </p></center>
 
 <% else %>
-	<%= f.input :requirements, :as => :text, input_html: { :class => 'ckeditor' } %>
+  <center><p>You cannot modify the requirements after the challenge has been launched. Please contact support@cloudspokes.com.</p></center>
+  <%= f.hidden_field :requirements %>
 <% end %>
+
+<%= f.input :requirements, :as => :text, input_html: { :class => 'ckeditor', :disabled => !@can_edit_challenge_requirements } %>
