--- a/app/views/challenges/scorecard.html.erb
+++ b/app/views/challenges/scorecard.html.erb
@@ -12,16 +12,28 @@
 
         <p>Here is the weighted criteria that judges will use to score submissions for this challenge.</p>
 
-				<% @scorecard_group.each do |sc| %>
-					<h4><%= sc.name %> (<%= sc.group_weight.to_i %>%)</h4>
-					<% counter = 1 %>
-					<% sc.qwikscore_questions__r.records.each do |question| %>
-						<% if question.question_type.eql?('Numeric') %>
-							<%= counter %>. <%= question.question_text %> (<%= question.minimum_value %> - <%= question.maximum_value %>)<br/>
-							<% counter += 1 %>
-						<% end %>
-					<% end %>	
-				<% end %>        
+        <% if @madison_sections %>
+		<% @madison_sections.each do |sc| %>
+			<h4><%= sc %></h4>
+			<% counter = 1 %>
+			<% requirements = Requirement.where("challenge_id = ? and section = ?", params[:id], sc).order("order_by") %>
+			<% requirements.each do |r| %>
+				<%= counter %>. <%= r.description %> (<%= r.scoring_type %>)<br/>
+				<% counter += 1 %>
+			<% end %>
+		<% end %>  
+        <% else %>
+		<% @scorecard_group.each do |sc| %>
+			<h4><%= sc.name %> (<%= sc.group_weight.to_i %>%)</h4>
+			<% counter = 1 %>
+			<% sc.qwikscore_questions__r.records.each do |question| %>
+				<% if question.question_type.eql?('Numeric') %>
+					<%= counter %>. <%= question.question_text %> (<%= question.minimum_value %> - <%= question.maximum_value %>)<br/>
+					<% counter += 1 %>
+				<% end %>
+			<% end %>	
+		<% end %>  
+        <% end %>      
 
       </div>
 
